Fixed crash with unmodifiable list